<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation1"
            android:checked="false"
            android:title="@string/navigation_daftar_pesanan" />
        <item
            android:id="@+id/navigasi_kategori_2"
            android:title="@string/navigation_history_pesanan">
            <menu>
                <item
                    android:id="@+id/navigation3"
                    android:checked="false"
                    android:title="@string/navigation_histori_minggu" />
                <item
                    android:id="@+id/navigation4"
                    android:checked="false"
                    android:title="@string/navigation_histori_bulan" />
            </menu>
        </item>
        <item
            android:id="@+id/navigation5"
            android:checked="false"
            android:title="@string/navigation_anggaran" />
        <item
            android:id="@+id/navigation6"
            android:checked="false"
            android:title="@string/navigation_Pengaturan" />
        <item
            android:id="@+id/sign_out"
            android:checked="false"
            android:title="@string/navigation_sign_out"
            />

    </group>



</menu>