<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="150dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


                <LinearLayout
                    android:id="@+id/form_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_splash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/login"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/logi_uname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Username"
                            android:inputType="text"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/login_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btnMasuk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:background="@color/colorGrey"
                        android:text="@string/login"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="20sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="LUPA PASSWORD?"
                        android:textColor="@color/colorDarkGrey" />

                </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>